# shopify-free-gift

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shopify.app.toml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/admin/: middleware.ts  next.config.mjs  package.json  shopify.app.toml  tsconfig.json
apps/admin/app/: AdminApp.tsx  CampaignEditor.tsx  CampaignListClient.tsx  Providers.tsx  appBridge.ts  layout.tsx  page.tsx  route.ts
apps/admin/prisma/: schema.prisma
docs/: cart-two-group-grouping-design.md  checkout-validation-function-design.md  model-c-include-gifts-design.md  multi-currency-fx-design.md  phase-3b-admin-design.md  phase-3b-stage-e-channel-availability-design.md  phase-3c-activation-design.md  phase-4-smoke-test.md  phase-5b-2b-1-manual-test.md  phase-5b-2b-plan.md  phase-5b-reseed.md  phase-5b1-manual-test.md
e2e/: .gitignore  package-lock.json  package.json  tsconfig.json
e2e/src/: browser.ts  build.ts  capture.ts  catalog.ts  config.ts  diag.ts  helpers.ts  inspect.ts  main.ts  market.ts  perf.ts  probe.ts  proxy.ts  runner.ts  scenarios.ts  smoke.ts  verify.ts  widget.ts
extensions/checkout-validation/: .gitignore  Cargo.toml  package.json  schema.graphql  shopify.extension.toml
extensions/checkout-validation/src/: cart_validations_generate_run.graphql  main.rs  run.graphql  run.test.ts  run.ts
extensions/theme/: build.mjs  package.json  shopify.extension.toml
scheduler/: package.json
scheduler/src/: index.ts
(+87 files in other folders)
